fixed tomcat config bugs